# MultiScheduler

./: MultiScheduler.code-workspace  README.md
.agent/rules/: use-overview-md.md
backend/: README.md  alembic.ini  pyproject.toml
backend/app/: deps.py  main.py
backend/app/core/: __init__.py  config.py  db.py  logger.py  supabase_client.py
backend/app/migration/: env.py  script.py.mako
backend/app/migration/versions/: 03e4b8da24fb_add_timestamp_mixin.py  532bb3b323c6_create_user.py  91321f5abef9_create_calendar.py  9fa894463654_create_event.py
backend/app/models/: __init__.py  calendar.py  errors.py  event.py  links.py  mixins.py  user.py
backend/app/routers/: auth.py  calendar.py  calendar_items.py  user.py
backend/app/services/: auth.py  calendar.py  event.py  user.py
backend/scripts/: dev.ps1  dev.sh  generate_openapi.py  generate_openapi.sh  openapi.json
backend/src/: main.py
backend/src/core/: __init__.py  config.py  logger.py  settings.py
docs/: project_overview.md
flutter/: README.md  pubspec.yaml
flutter/android/app/: build.gradle.kts
flutter/ios/Runner/: Info.plist
flutter/ios/Runner.xcodeproj/: project.pbxproj
flutter/lib/: main.dart
flutter/lib/api/: dio_client.dart
flutter/lib/api/interceptors/: auth_interceptor.dart
flutter/lib/data/repositories/: auth_remote_repository.dart  auth_repository.dart  calendar_repository.dart
flutter/lib/helper/: time.dart
flutter/lib/router/: router.dart  router.g.dart  scaffold_with_navbar.dart
flutter/lib/router/auth/: auth_router.dart  auth_router.g.dart  login_screen.dart  signup_screen.dart
flutter/lib/router/home/: home_route.dart  home_screen.dart
flutter/lib/router/schedule/: schedule_route.dart  schedule_screen.dart
flutter/lib/router/settings/: settings_route.dart  settings_screen.dart
flutter/lib/router/tasks/: tasks_route.dart  tasks_screen.dart
flutter/linux/: CMakeLists.txt
flutter/linux/runner/: my_application.cc
flutter/macos/Runner.xcodeproj/: project.pbxproj
flutter/macos/Runner/Configs/: AppInfo.xcconfig
flutter/test/: widget_test.dart
flutter/web/: index.html  manifest.json
flutter/windows/: CMakeLists.txt
flutter/windows/runner/: Runner.rc  main.cpp
supabase/: config.toml
(+4 files in other folders)
