[project]
name = "multi-scheduler-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgi-correlation-id>=4.3.4",
    "fastapi>=0.124.2",
    "pydantic-settings>=2.12.0",
    "rich>=14.2.0",
    "sqlmodel>=0.0.27",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.38.0",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
