[project]
name = "multi-scheduler-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgi-correlation-id>=4.3.4",
    "fastapi>=0.124.2",
    "pydantic-settings>=2.12.0",
    "rich>=14.2.0",
    "ruff>=0.14.10",
    "sqlmodel>=0.0.27",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.38.0",
]

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.ruff.lint]
select = [
    # 基本ルール
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes

    # インポートと型
    "I",     # isort
    "UP",    # pyupgrade
    "TC",    # flake8-type-checking
    "TID",   # flake8-tidy-imports

    # コード品質
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "C4",    # flake8-comprehensions
    "PTH",   # flake8-use-pathlib

    # 命名とドキュメント
    "N",     # pep8-naming
    "D2",    # pydocstyle
    "D3",
    "D413",
    "D419",
    "A",     # flake8-builtins

    # 非同期処理
    "ASYNC", # flake8-async

    # パフォーマンス
    "PERF",  # Perflint

    # フレームワーク
    "FAST",  # FastAPI

    # その他
    "ERA",   # eradicate
    "ARG",   # flake8-unused-arguments
    "RET",   # flake8-return
    "PL",    # Pylint
    "RUF",   # Ruff-specific rules
]

ignore = [
    "D203",
    "D213",
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = false

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"core".msg = "Use `app.core` instead of `core`"
"api".msg = "Use `app.api` instead of `api`"

[tool.ruff.format]
preview = true
docstring-code-format = true
